# ITLabAI

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  static-analysis.yml
app/Accuracy/: accuracy_check.cpp
app/AccuracyImgNet/: accimgnet.cpp
app/Converters/: parser_onnx.py  requirements.txt
app/Graph/: CMakeLists.txt  acc_check.cpp  build.cpp  build.hpp  graph_build.cpp
cmake/: FindTBB.cmake
docs/: imagenet1000_clsidx_to_labels.json
include/: CMakeLists.txt
include/graph/: graph.hpp
include/graph_transformations/: graph_transformations.hpp
include/layers/: BatchNormalizationLayer.hpp  BinaryOpLayer.hpp  ConcatLayer.hpp  ConvLayer.hpp  DropOutLayer.hpp  EWLayer.hpp  FCLayer.hpp  FlattenLayer.hpp  InputLayer.hpp  Layer.hpp  MatmulLayer.hpp  OutputLayer.hpp  PoolingLayer.hpp  ReduceLayer.hpp  ReshapeLayer.hpp  SoftmaxLayer.hpp  SplitLayer.hpp  Tensor.hpp  TransposeLayer.hpp
include/layers_oneDNN/: EWLayer.hpp
src/: CMakeLists.txt
src/Weights_Reader/: reader_weights.cpp
src/graph_transformations/: CMakeLists.txt  graph_transformations.cpp
src/layers/: BatchNormalizationLayer.cpp  CMakeLists.txt  ConcatLayer.cpp  ConvLayer.cpp  FCLayer.cpp  FlattenLayer.cpp  MatmulLayer.cpp  PoolingLayer.cpp  ReduceLayer.cpp  ReshapeLayer.cpp  SoftmaxLayer.cpp  SplitLayer.cpp
src/layers_oneDNN/: CMakeLists.txt  EWLayer.cpp
test/: CMakeLists.txt  main.cpp
test/graph/: test_graph.cpp
test/inference/: test_inference.cpp
test/single_layer/: test_batchnormalizationlayer.cpp  test_binaryoplayer.cpp  test_concatlayer.cpp  test_convlayer.cpp  (+11 more)
(+1 files in other folders)
